[package]
name = "hangman"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hangman"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
solana-program = "=1.17.7"
hex="0.4.3"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }


