[package]
name = "lootbox_hangman"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lootbox_hangman"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.25.0", features = ["init-if-needed"]}
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
getrandom = { version = "0.2.10", features = ["custom"] }
hex="0.4.3"
solana-program = "1.15.2"